# perpl-dex-sdk

./: .gitignore  Cargo.toml  README.md
abi/dex/: ERC1967Proxy.json  Errors.abi.json  Exchange.json  REVISION
examples/: print_trades.rs
src/: abi.rs  error.rs  lib.rs  num.rs  stream.rs
src/fill/: listener.rs  mod.rs  types.rs
src/state/: account.rs  event.rs  exchange.rs  l2_book.rs  mod.rs  order.rs  perpetual.rs  position.rs
src/state/l2_book/: error.rs  level.rs  mod.rs  order.rs  tests.rs
src/state/l3_book/: level.rs  mod.rs  order.rs  tests.rs
src/testing/: mod.rs
src/types/: event.rs  mod.rs  order.rs  request.rs
tests/: events.rs  snapshot.rs
