[package]
name = "dex-sdk"
version = "0.1.0"
edition = "2024"
resolver = "3"
build = "build.rs"

[dependencies]
alloy = { version = "1.0.42", default-features = false, features = [
  "contract",
  "eips",
  "node-bindings",
  "provider-http",
  "reqwest",
  "reqwest-rustls-tls",
  "rpc",
  "rpc-client",
  "rpc-types",
] }
alloy-sol-types = { version = "1.4.1", default-features = false, features = [
  "more-tuple-impls",
] }
dashmap = { version = "6.1.0" }
derive_more = { version = "2.1.0", default-features = false, features = [ "debug" ]}
fastnum = { version = "0.7.2" }
futures = { version = "0.3.31" }
itertools = { version = "0.14.0" }
thiserror = { version = "2.0.17" }
tokio = { version = "1.48.0", features = ["sync"] }

[dev-dependencies]
tokio = { version = "1.48.0", features = ["rt", "macros"] }
tokio-test = { version = "0.4" }
